[package]
name = "learn-opengl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0" # OpenGL bindings
glfw = "0.51.0" # Window: C++ GLFW wrapper
tracing = "0.1.37" # logger
thiserror = "1" # error derive macro
anyhow = "1" # error handling
image = "0.24.5" # image processing
nalgebra = "0.32.2" # Linear algebra
# window related dependencies
winit = "0.28"
glutin = "0.30"
glutin-winit = "0.3"
raw-window-handle = "0.5.0"

[dev-dependencies]
bytemuck = "1.13.0" # bit cast
tracing-subscriber = "0.3.16" # Utilities for implementing and composing tracing subscribers.


[build-dependencies]
cfg_aliases = "0.1.1"
