[package]
name = "learn-opengl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0" # OpenGL bindings
glfw = "0.52.0" # Window: C++ GLFW wrapper
tracing = "0.1.37" # logger
thiserror = "1" # error derive macro
anyhow = "1" # error handling
image = "0.24.5" # image processing
nalgebra = "0.32.2" # Linear algebra : https://nalgebra.org/docs/

# window related dependencies
winit = "0.28"
glutin = "0.30"
glutin-winit = "0.3"
raw-window-handle = "0.5.0"

[dev-dependencies]
bytemuck = "1.13.0" # bit cast
tracing-subscriber = "0.3.16" # Utilities for implementing and composing tracing subscribers.


[build-dependencies]
cfg_aliases = "0.1.1"

[[example]]
name = "test_nalgebra"
path = "examples/test_deps/test_nalgebra.rs"

[[example]]
name = "001_draw_triangle"
path = "examples/foundation/001_draw_triangle.rs"
doc-scrape-examples = true

[[example]]
name = "002_draw_quad"
path = "examples/foundation/002_draw_quad.rs"
doc-scrape-examples = true

[[example]]
name = "003_texture"
path = "examples/foundation/003_texture.rs"
doc-scrape-examples = true

[[example]]
name = "004_transform"
path = "examples/foundation/004_transform.rs"
doc-scrape-examples = true

[[example]]
name = "005_depth_test"
path = "examples/foundation/005_depth_test.rs"
doc-scrape-examples = true

[[example]]
name = "006_camera"
path = "examples/foundation/006_camera.rs"
doc-scrape-examples = true

[[example]]
name = "simple_color"
path = "examples/lighting/007_simple_color.rs"
doc-scrape-examples = true

[[example]]
name = "blinn_phong"
path = "examples/lighting/008_blinn_phong.rs"
doc-scrape-examples = true

[[example]]
name = "material_map"
path = "examples/lighting/009_material_map.rs"
doc-scrape-examples = true

[[example]]
name = "multi_lights"
path = "examples/lighting/010_multi_lights.rs"
doc-scrape-examples = true
